--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
+    "langchain-community>=0.3.24",
     "langchain-core>=0.3.63",
+    "langchain-neo4j>=0.4.0",
     "neo4j>=5.28.1",
     "pydantic-ai>=0.2.12",
     "rich>=14.0.0",
